elastic/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: default
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/instance: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kibana
      app.kubernetes.io/instance: elastic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kibana
        app.kubernetes.io/instance: elastic
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.4.1
          ports:
            - name: http
              containerPort: 5601
          livenessProbe: &probe
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 10
          readinessProbe: *probe
          resources: {}
