elastic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elastic
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elastic
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/instance: elastic
  ports:
    - name: http
      port: 9200
      protocol: TCP
      targetPort: http

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elastic
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/instance: elastic
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/instance: elastic
  ports:
    - name: http
      port: 5601
      protocol: TCP
      targetPort: http
