elastic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: elastielastic-ingress
    app.kubernetes.io/instance: elastic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: logging.local
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: http
